# script-fhir-facade

./: .dockerignore  .gitignore  Dockerfile  README.md  default.env  docker-compose.yaml  requirements.dev.txt  requirements.txt  script.env.default  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-cd.yaml
script_facade/: app.py  cli.py  config.py  jsonify_abort.py  main.py
script_facade/api/: __init__.py  fhir.py  misc.py
script_facade/client/: client.py  client_106.py  config.py  sof.py
script_facade/client/templates/: request_106.xml  request_20170701.xml
script_facade/models/r1/: bundle.py  medication_order.py  patient.py
script_facade/models/r4/: medication_request.py
script_facade/rxnav/: transcode.py
tests/: conftest.py  test_api.py  test_patient_query.py  test_rxhistory_request.py  test_rxnav.py  test_transform.py
tests/test_api/: med_order_bundle.json  patients.csv
tests/test_patient_query/: no_results.xml
tests/test_rxnav/: rx_response.json
tests/test_transform/: rxhistory-response.106.xml  rxhistory-response.20170701.xml
