# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = script_facade

[options]
packages = script_facade
zip_safe = False
include_package_data = True

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    flask
    lxml
    redis
    requests-cache

[options.extras_require]
dev =
    pytest
    pytest-datadir
    pytest-flask
    pytest-mock
    tox

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # error on bad assertions
    error:.*assertion is always true.*
